...
                                    .stroke(Color.primary, lineWidth: 1)
                            )
                            .accentColor(.primary)
                            .onAppear {
                                searchTerm = ""
                            }
                            .accessibilityIdentifier("SearchTextField")
                    }
                    .padding(20)
                    
                    Button("Search") {
                        if searchTerm.count > 0 {
                            searchButtonSelected = true
...
                    }
                    .padding()
                    .background(Color.blue)
                    .foregroundColor(Color.primary)
                    .cornerRadius(10)
                    .font(.title)
                    .accessibilityIdentifier("SearchButton")
                    .alert(isPresented: $showAlert) {
                        Alert(title: Text("Error"), message: Text("Textfield cannot be empty"), dismissButton: .default(Text("OK")))
                    }
                }
                .navigationTitle("Search Movies")
                .navigationDestination(isPresented: $searchButtonSelected, destination: {
...
